--- a/css/index.css
+++ b/css/index.css
@@ -66,14 +66,18 @@
     color: #292929;
 }
 
-.mainCategoryCardTitle {
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 6px;
+.categoryCard .mainCategoryCardTitle {
+    font-size: 20px;
+    color: #333;
 }
 
+
 .mainCategoryCardDescription {
-    padding: 6px;
+    font-size: 16px;
+    color: #333;
+    line-height: 1.5;
 }
+
 
 .sidebarContent {
     background-color: #d5d9e7;
