--- a/css/paginas.css
+++ b/css/paginas.css
@@ -49,8 +49,9 @@ body {
 }
 
 .mainCardImg {
-    width: 100%;
+    width: 100%; 
     height: auto;
+    max-width: 100%;
 }
 
 .mainCategoryCardTitle {
