--- a/css/404.css
+++ b/css/404.css
@@ -1,10 +1,15 @@
 @charset "UTF-8";
 
+body {
+    background-color: black;
+}
+
 h1 {
+    color: white;
     display: flex;
     justify-content: center; 
     align-items: center;   
     height: 100vh;         
     margin: 0;            
-    font-size: 50px;  
+    font-size: 70px;  
 }
