--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,8 @@
 
 * {
     font-family: 'Poppins', sans-serif;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 .container {
@@ -47,7 +47,7 @@
     height: 400px;
     border: 3px solid transparent;
     border-radius: 10px;
-    transition: 0.5s;
+    transition: transform 0.6s ease-in-out, box-shadow 0.6s ease-in-out, border-color 0.6s ease-in-out;
     cursor: pointer;
     padding: 10px;
 }
@@ -60,10 +60,8 @@
 
 .categoryCard:hover {
     border-color: #86a0cc;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transform: translateY(-5px);
-    width: 320px;
-    height: 430px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    transform: translateY(-5px) scale(1.05);
 }
 
 .pag-link {
@@ -72,16 +70,19 @@
 }
 
 .categoryCard .mainCategoryCardTitle {
-    font-size: 20px;
+    font-size: 23px;
+    text-decoration: dotted;
     color: #333;
+    text-align: center;
 }
 
 
 .mainCategoryCardDescription {
-    font-size: 15px;
+    font-size: 14px;
+    text-align: left;
     color: #333;
     line-height: 1.5;
-    width: 300px;
+    width: 270px;
     height: 200px;
 }
 
