--- a/css/paginas.css
+++ b/css/paginas.css
@@ -44,7 +44,10 @@ body {
 .categoryCard{
     width: 100%;
     /* Ajuste a largura dos cards conforme necessário */
-    margin: 5px;
+    height: 1170px;
+    overflow: hidden;
+    /* min-height: fit-content; */
+    margin: 5px 5px 90px 5px;
     padding: 20px;
     background-color: lightgrey;
     border: 5px solid #5167b2;
@@ -55,8 +58,8 @@ body {
 
 .mainCardImg {
     width: 100%; 
-    height: auto;
-    max-height: 60vh; 
+    height: 900px;
+    max-height: 80vh; 
     object-fit: cover; 
     border-radius: 10px;
 }
@@ -76,16 +79,68 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    gap: 10px;
 }
 
-.teste {
+.sugestao {
     width: 90%;
-    height: 220px;
-    background-color: lightgray;
-    border: #5167b2 solid 5px;
+    height: 240px;
+    border: solid 5px gray;
     border-radius: 10px;
     justify-content: center;
     text-align: center;
-    margin: 5px;
+    margin: 5px 5px 13px 5px;
+    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out, border-color 0.5s ease-in-out, height 0.3s ease-in-out;
+    cursor: pointer;
+    padding: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.sugestao:hover {
+    border-color: #5167b2;
+    height: 360px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+    transform: translateY(-5px) scale(1.05);
+}
+
+.pag-link {
+    text-decoration: none;
+    color: #292929;
+}
+
+.secCardImg {
+    width: 90%;
+    height: 170px;
+    max-height: 30vh; 
+    object-fit: cover; 
+    border-radius: 10px;
+}
+
+.secCategoryCardDescription {
+    height: 0;
+    font-size: 14px;
+    line-height: 1.5;
+    text-align: left;
+    color: transparent;
+    text-decoration: none;
+    transition: color .5s ease-in;
+}
+
+.sugestao:hover .secCategoryCardDescription {
+    width: 100%;
+    height: 90%;
+    color: #333;
+    transition-duration: .5s;
+}
+
+.sugestao .secCategoryCardDescription {
+    transition-duration: .05s;
+}
+
+.sugestao .secCategoryCardTitle {
+    font-size: 20px;
+    text-decoration: dotted;
+    color: #333;
+    text-align: center;
 }
