--- a/css/index.css
+++ b/css/index.css
@@ -185,3 +185,58 @@ input {
         padding: 1px;
     }
 }
+
+.search {
+    width: 90%;
+    height: 50px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+}
+
+.searchBox {
+    width: 100%;
+}
+
+.searchInt {
+    width: 50%;         
+    height: 40px;        
+    padding: 5px;   
+    border-radius: 5px;
+    border: 1px solid #ccc;
+}
+
+.searchBtn {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px; 
+    background-color: #bed4f9;
+    color: white;        
+    border: none; 
+    cursor: pointer;
+    margin-left: 5px;
+}
+
+.searchBtn a {
+    text-decoration: none;
+}
+
+.searchBtn:hover {
+    background-color: #86a0cc;
+}
+
+@media (max-width: 600px) {
+    .search {
+        width: 100%;
+    }
+
+    .searchInt {
+        width: 80%;
+    }
+
+    .searchBtn {
+        width: 40px;
+        height: 40px;
+    }
+}
