--- a/css/pesquisa.css
+++ b/css/pesquisa.css
@@ -25,19 +25,20 @@
 .gridContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
   padding: 20px;
-  flex: 1 0 auto;
+  flex: 1 0 1;
   padding-bottom: 80px;
-  justify-content: center;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .mainContent {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-  column-gap: 20px;
+  gap: 10px;
+  column-gap: 10px;
   grid-area: mainContent;
   width: 100%;
   max-width: 100%;
